Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextObjTextWrapped.quorum
class main
    action main
        Text t = "text"
    end
end